extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+server.port=8080
+
+github.client.id=9c862caa45c7e4cd49e1
+github.client.secret=5f5e6e1d168e46555ef35cc49f1bd95c4e000d07
+github.redirect.uri=http://localhost:8080/callback
